crates/carta/tests/snapshots/golden_writer__typst__table__table-aligned.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#figure(
  align(center)[#table(
    columns: 4,
    align: (left,right,center,auto,),
    table.header([l], [r], [c], [d],),
    table.hline(),
    [1], [2], [3], [4],
  )]
  , kind: table
  )
