crates/carta/tests/snapshots/golden_writer__typst__table__table-caption-blocks.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#figure(
  align(center)[#table(
    columns: 1,
    align: (auto,),
    table.header([h],),
    table.hline(),
    [v],
  )]
  , caption: [First caption paragraph

  Second caption paragraph

  ]
  , kind: table
  )
