crates/carta/tests/snapshots/golden_writer__typst__table__table-cell-blank.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#figure(
  align(center)[#table(
    columns: 2,
    align: (auto,auto,),
    table.header([left], [right],),
    table.hline(),
    [x], [],
    [], [y],
  )]
  , kind: table
  )
