crates/carta/tests/snapshots/golden_writer__typst__table__table-cell-blocks.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#figure(
  align(center)[#table(
    columns: 2,
    align: (auto,auto,),
    table.header([name], [notes],),
    table.hline(),
    [alpha], [first paragraph

    - one
    - two

    ],
  )]
  , kind: table
  )
