crates/carta/tests/snapshots/golden_writer__typst__table__table-cell-boundary-space.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#figure(
  align(center)[#table(
    columns: 3,
    align: (auto,auto,auto,),
    table.header([col1], [col2 ], [col3],),
    table.hline(),
    [ a ], [spaced text ], [trailing ],
  )]
  , kind: table
  )
