crates/carta/tests/snapshots/golden_writer__typst__table__table-cell-linebreak.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#figure(
  align(center)[#table(
    columns: 2,
    align: (auto,auto,),
    table.header([product], [note],),
    table.hline(),
    [multi \ line cell], [plain],
  )]
  , kind: table
  )
