crates/carta/tests/snapshots/golden_writer__typst__table__table-cluster-widths.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#figure(
  align(center)[#table(
    columns: 5,
    align: (auto,auto,auto,auto,auto,),
    table.header([signs], [selector], [joined], [narrow], [mark],),
    table.hline(),
    [⌚⭐✅], [☀️1️⃣], [👨‍👩‍👧👍🏽], [㉈゙], [́abc],
  )]
  , kind: table
  )
